info was missing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </marquee>
       </div>
       <div class="info-container">
-        <a href="/info.html"> Info </a>
+        <a href="https://trudypainter.github.io/pollen-landing/info.html">
+          Info
+        </a>
       </div>
     </div>
     <div id="scroll-image" class="image-wheel"></div>
