--- a/info.html
+++ b/info.html
@@ -15,7 +15,7 @@
         </marquee>
       </div>
       <div class="info-container">
-        <a href="/info.html"> Info </a>
+        <a href="https://trudypainter.github.io/pollen-landing/info.html"> Info </a>
       </div>
     </div>
     <div class = "info-block">
