home link wrong

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <html>
   <body>
     <div class="header">
-      <div class="pollen-container"><a href="/"> Pollen </a></div>
+      <div class="pollen-container">
+        <a href="https://trudypainter.github.io/pollen-landing/"> Pollen </a>
+      </div>
       <div class="marquee-container">
         <marquee
           >Pollen is an applied research studio. We are fascinated by early
