--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
 <html>
   <body>
     <div class="header">
-      <div class="pollen-container"><a href="/"> Pollen </a></div>
+      <div class="pollen-container"><a href="https://trudypainter.github.io/pollen-landing/"> Pollen </a></div>
       <div class="marquee-container">
         <marquee
           >Pollen is an applied research studio. We are fascinated by early
