--- a/index.html
+++ b/index.html
@@ -5,24 +5,83 @@
 </head>
 <html>
   <body>
-    <div class="header">
-      <div class="pollen-container">
-        <a href="https://trudypainter.github.io/pollen-landing/"> Pollen </a>
+    <div class="pollen-menu">
+      <div>
+        <a
+          class="pollen-home"
+          href="https://trudypainter.github.io/pollen-landing/"
+        >
+          Pollen
+        </a>
       </div>
-      <div class="marquee-container">
-        <marquee
-          >Pollen is an applied research studio. We are fascinated by early
-          computing ideas that saw the computer as a tool for the technologist
-          and artist. We are developing novel web platforms to cultivate
-          collaborative environments across culture and technology.
-        </marquee>
-      </div>
-      <div class="info-container">
-        <a href="https://trudypainter.github.io/pollen-landing/info.html">
-          Info
+      <div>
+        <a
+          class="right-item"
+          href="https://trudypainter.github.io/pollen-landing/"
+        >
+          About
+        </a>
+        <a
+          class="right-item"
+          href="https://trudypainter.github.io/pollen-landing/"
+        >
+          Pollen.so
         </a>
       </div>
     </div>
-    <div id="scroll-image" class="image-wheel"></div>
+
+    <div class="row">
+      <div class="column">
+        <div class="image-display">
+          <img
+            src="https://d2w9rnfcy7mm78.cloudfront.net/2286347/original_00dfc67ab1c68f367d0c80977e3690f9.jpg?1528501095?bc=1"
+          />
+         
+        </div>
+      </div>
+      <div class="column">
+        <div class="info top-info">
+          <div class="header">Pollen Research Studio</div>
+          <div class="body">
+            Pollen is fascinated by early computing ideas that saw the computer
+            as a tool for the technologist, creator, and artist. We are
+            developing novel web platforms to foster collaborative environments
+            across culture and technology.
+          </div>
+        </div>
+        <div class="info bottom-info">
+          <div class="header">What are we building?</div>
+          <div class="body">
+            Currently, we’re rethinking information storytelling and large scale
+            community contribution.
+          </div>
+          <div class="body">
+            Our first product is Pollen.so → a contribution space for web groups, online audiences, and
+            DAOs.
+          </div>
+          <div class="header">Collaborators</div>
+          <div class="link-grid">
+              <a class="collab">Entropy</a>
+              <a class="collab">Algorand</a>
+              <a class="collab">Eternal</a>
+              <a class="collab">CLabs</a>
+              <a class="collab">Other Internet</a>
+              <a class="collab">Colors DAO</a>
+              <a class="collab">???</a>
+              <a class="collab">Teal</a>
+              <a class="collab">MIT Media Lab</a>
+              <a class="collab">Lychee</a>
+              <a class="collab">Arkive DAO</a>
+              <a class="collab">HiFi Labs</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-links">
+      <a href="twitter.com">Twitter</a>
+      <a href="Are.na"> Are.na</a>
+      <a href="mailto:omo@mit.edu"> Mail</a>
+    </div>
   </body>
 </html>
