--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
           </div>
           <div class="header">Collaborators</div>
           <div class="link-grid">
-              <a class="collab">Entropy</a>
-              <a class="collab">Algorand</a>
-              <a class="collab">Eternal</a>
-              <a class="collab">CLabs</a>
-              <a class="collab">Other Internet</a>
-              <a class="collab">Colors DAO</a>
-              <a class="collab">???</a>
-              <a class="collab">Teal</a>
-              <a class="collab">MIT Media Lab</a>
-              <a class="collab">Lychee</a>
-              <a class="collab">Arkive DAO</a>
-              <a class="collab">HiFi Labs</a>
+              <a href="https://twitter.com/ennntropy" class="collab">Entropy</a>
+              <a href="https://www.algorand.com/"  class="collab">Algorand</a>
+              <a  href="https://eternal.plus/" class="collab">Eternal</a>
+              <a  class="collab">CLabs</a>
+              <a href=" https://otherinter.net/" class="collab">Other Internet</a>
+              <a href="https://twitter.com/colorsxdao" class="collab">Colors DAO</a>
+              <a  class="collab">???</a>
+              <a href="https://tealprocess.net/" class="collab">Teal</a>
+              <a href="https://www.media.mit.edu/" class="collab">MIT Media Lab</a>
+              <a href="https://twitter.com/lycheevision" class="collab">Lychee</a>
+              <a href="https://arkive.net/" class="collab">Arkive DAO</a>
+              <a  class="collab">HiFi Labs</a>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="bottom-links">
-      <a href="twitter.com">Twitter</a>
-      <a href="Are.na"> Are.na</a>
-      <a href="mailto:omo@mit.edu"> Mail</a>
+      <a href="https://twitter.com/pppollen"><object data="svgs/twitter logo.svg" type="image/svg+xml"> </object></a>
+      <a href="https://www.are.na/pollen"> <object data="svgs/Arena Logo.svg" type="image/svg+xml"> </object></a>
+      <a href="mailto:hello@pollen.rs"> <object data="svgs/email.svg" type="image/svg+xml"> </object></a>
     </div>
   </body>
 </html>
