--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             across culture and technology.
           </div>
         </div>
-        <div class="info bottom-info">
+        <div class="info bottom-info building">
           <div class="header">What are we building?</div>
           <div class="body">
             Currently, we’re rethinking information storytelling and large scale
@@ -62,17 +62,12 @@
           <div class="header">Collaborators</div>
           <div class="link-grid">
               <a href="https://twitter.com/ennntropy" class="collab">Entropy</a>
+              <a href="https://www.media.mit.edu/" class="collab">MIT Media Lab</a>
               <a href="https://www.algorand.com/"  class="collab">Algorand</a>
-              <a  href="https://eternal.plus/" class="collab">Eternal</a>
-              <a  class="collab">CLabs</a>
               <a href=" https://otherinter.net/" class="collab">Other Internet</a>
               <a href="https://twitter.com/colorsxdao" class="collab">Colors DAO</a>
-              <a  class="collab">???</a>
               <a href="https://tealprocess.net/" class="collab">Teal</a>
-              <a href="https://www.media.mit.edu/" class="collab">MIT Media Lab</a>
-              <a href="https://twitter.com/lycheevision" class="collab">Lychee</a>
-              <a href="https://arkive.net/" class="collab">Arkive DAO</a>
-              <a  class="collab">HiFi Labs</a>
+              <a href="https://arkive.net/" class="collab">Arkive</a>
             </div>
           </div>
         </div>
