position absolute fix on right col

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             across culture and technology.
           </div>
         </div>
-        <div class="info bottom-info building">
+        <div class="info bottom-info">
           <div class="header">What are we building?</div>
           <div class="body">
             Currently, we’re rethinking information storytelling and large scale
