--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </div>
       <div class="column">
         <div class="info top-info">
-          <div class="header">Pollen Research Studio</div>
+          <div class="header"> Pollen </div>
           <div class="body">
-            Pollen is fascinated by early computing ideas that saw the computer
+            Pollen is a research studio fascinated by early computing ideas that saw the computer
             as a tool for the technologist, creator, and artist. We are
             developing novel web platforms to foster collaborative environments
             across culture and technology.
