minor changes to website

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="column">
         <div class="info top-info">
-          <div class="header"> Pollen </div>
+          <!-- <div class="header"> Pollen </div> -->
           <div class="body">
             Pollen is a research studio fascinated by early computing ideas that saw the computer
             as a tool for the technologist, creator, and artist. We are
@@ -61,13 +61,13 @@
           </div>
           <div class="header">Collaborators</div>
           <div class="link-grid">
-              <a href="https://twitter.com/ennntropy" class="collab">Entropy</a>
-              <a href="https://www.media.mit.edu/" class="collab">MIT Media Lab</a>
-              <a href="https://www.algorand.com/"  class="collab">Algorand</a>
-              <a href=" https://otherinter.net/" class="collab">Other Internet</a>
-              <a href="https://twitter.com/colorsxdao" class="collab">Colors DAO</a>
-              <a href="https://tealprocess.net/" class="collab">Teal</a>
-              <a href="https://arkive.net/" class="collab">Arkive</a>
+              <a href="https://twitter.com/ennntropy" class="collab">Entropy, </a>
+              <a href="https://www.media.mit.edu/" class="collab">MIT Media Lab, </a>
+              <a href="https://www.algorand.com/"  class="collab">Algorand, </a>
+              <a href=" https://otherinter.net/" class="collab">Other Internet, </a>
+              <a href="https://twitter.com/colorsxdao" class="collab">Colors DAO, </a>
+              <a href="https://tealprocess.net/" class="collab">Teal, </a>
+              <a href="https://arkive.net/" class="collab">Arkive </a>
             </div>
           </div>
         </div>
